# uranus_neo

./: CMakeLists.txt  Uranus.cpp
back/: ComponentModule.cpp  PlayerBase.h  PlayerComponent.cpp
back/Mongo/: DBTask_Find.h  DBTask_FindOne.h  DBTask_Transcation.h  DBTask_UpdateOne.h
back/mongo/: MongoContext.h
back/reflect/: Clazz.cpp  ClazzFactory.h  ClazzField.cpp  ClazzField.h  ClazzMethod.cpp  ConstructTag.h  Constructor.h  GcTable.cpp  Object.cpp  Object.h
cmake/: UranusConfig.cmake.in
config/: server.crt  server.key  server.yaml
config/xlsx/: 外观.xlsx
impl/: AgentHandlerImpl.cpp  AgentHandlerImpl.h  CMakeLists.txt  LoginHandlerImpl.cpp  LoginHandlerImpl.h  export.h
impl/Mongo/: MongoAdapter.cpp  MongoAdapter.h  MongoTaskDef.h
protobuf/: CMakeLists.txt
protobuf/def/: appearance.proto  login.proto  player.proto
script/: generator.py  sql.py  start.ps1  third_libs_install.bat  xlsx2json.py
service/agent/: CMakeLists.txt  ComponentModule.cpp  ComponentModule.h  LoadProtocol.cpp  Player.cpp  Player.h  PlayerComponent.cpp  PlayerComponent.h  Protocol.h
service/agent/component/appear/: AppearComponent.cpp  AppearComponent.h
service/gameworld/: CMakeLists.txt  GameWorld.cpp  GameWorld.h
src/: ActorBase.cpp  ActorBase.h  Agent.cpp  Agent.h  AgentBase.cpp  AgentBase.h  AgentHandler.cpp  AgentHandler.h  Common.h  Context.cpp  Context.h  ContextBase.cpp  ContextBase.h  DataAsset.h  Module.cpp  Module.h  PlayerAgent.cpp  PlayerAgent.h  PlayerBase.cpp  PlayerBase.h  Server.cpp  Server.h  ServiceAgent.cpp  ServiceAgent.h  ServiceBase.cpp  ServiceBase.h  Utils.cpp  Utils.h
src/Base/: ByteArray.cpp  ByteArray.h  CodecFactory.h  ContextHandle.h  EventParam.h  IdentAllocator.h  Package.cpp  Package.h  PackageCodec.h  Packet.h  ProtocolRoute.h  Recycle.cpp  Recycle.h  Recycler.cpp  Recycler.h  ServiceHandle.h  SharedLibrary.cpp  SharedLibrary.h  TimerHandle.h  Types.h
src/Config/: Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  LogicConfig.h
src/Database/: DBAdapter.cpp  DBAdapter.h  DBAdapterBase.cpp  DBAdapterBase.h  DBContext.h  DBContextBase.h  DBTaskBase.h  DBTask_DeleteMany.h  DBTask_DeleteOne.h  DBTask_Find.h  DBTask_FindOne.h  DBTask_InsertMany.h  DBTask_InsertOne.h  DBTask_Query.h  DBTask_QueryOne.h  DBTask_Replace.h  DBTask_Transaction.h  DBTask_Update.cpp  DBTask_Update.h  DBTask_UpdateMany.h  DBTask_UpdateOne.h  DataAccess.cpp  DataAccess.h  DatabaseQuery.cpp  DatabaseQuery.h  DatabaseTask.h  DbTaskUpdate.cpp  DbTaskUpdate.h
src/Database/Mongo/: DBTask_DeleteMany.h  DBTask_DeleteOne.h  DBTask_Find.h  DBTask_FindOne.h  DBTask_InsertMany.h  DBTask_InsertOne.h  DBTask_Replace.h  DBTask_Transcation.h  DBTask_UpdateMany.h  DBTask_UpdateOne.h  MongoAdapter.cpp  MongoAdapter.h  MongoAdapterStartUp.h  MongoContext.h  MongoStartUpData.h
src/Event/: EventModule.cpp  EventModule.h
src/Gateway/: AgentContext.cpp  AgentContext.h  ComponentModule.cpp  ComponentModule.h  Gateway.cpp  Gateway.h  PlayerAgent.cpp  PlayerAgent.h  PlayerBase.cpp  PlayerBase.h  PlayerComponent.cpp  PlayerComponent.h
src/Internal/: CodecFactory.cpp  CodecFactory.h  Packet.cpp  Packet.h  PacketCodec.cpp  PacketCodec.h
src/Logger/: LoggerModule.cpp  LoggerModule.h
src/Login/: LoginAuth.cpp  LoginAuth.h  LoginHandler.h
src/Monitor/: Monitor.cpp  Monitor.h  PluginBase.cpp  PluginBase.h
src/Network/: Connection.cpp  Connection.h  Network.cpp  Network.h
src/Service/: ServiceContext.cpp  ServiceContext.h  ServiceModule.cpp  ServiceModule.h  ServiceType.h
src/Timer/: TimerModule.cpp  TimerModule.h
src/base/: AgentHandle.h  AgentHandler.cpp  AgentHandler.h  AgentWorker.cpp  AgentWorker.h  ByteArray.cpp  ByteArray.h  CodecFactory.cpp  CodecFactory.h  ConcurrentDeque.h  ContextHandle.h  DataAsset.h  EventParam.h  IdentAllocator.h  Memory.cpp  Memory.h  MultiIOContextPool.cpp  MultiIOContextPool.h  Package.h  PackageCodec.h  PlatformInfo.h  ProtocolRoute.h  Recycle.cpp  Recycle.h  RecycleHandle.h  Recycler.cpp  Recycler.h  ServiceHandle.h  SharedLibrary.cpp  SharedLibrary.h  SingleIOContextPool.cpp  SingleIOContextPool.h  Types.h
src/config/: Config.h  LogicConfig.h
src/database/: DBAdapterBase.cpp  DBAdapterBase.h  DBContext.h  DBTaskBase.h  DataAccess.cpp  DataAccess.h
src/event/: EventModule.cpp  EventModule.h
src/factory/: CodecFactory.cpp  CodecFactory.h  PlayerFactory.h  PlayerHandle.cpp  PlayerHandle.h  ServiceFactory.h  ServiceHandle.cpp  ServiceHandle.h
src/gateway/: Agent.cpp  Agent.h  AgentContext.cpp  AgentContext.h  Gateway.cpp  Gateway.h  PlayerAgent.cpp  PlayerAgent.h  PlayerBase.cpp  PlayerBase.h
src/internal/: CodecFactory.cpp  CodecFactory.h  Packet.cpp  Packet.h  PacketCodec.cpp  PacketCodec.h  PlayerFactory.cpp  PlayerFactory.h  ServiceFactory.cpp  ServiceFactory.h
src/logger/: LoggerModule.cpp  LoggerModule.h
src/login/: LoginAuth.cpp  LoginAuth.h  LoginHandler.cpp  LoginHandler.h
src/monitor/: Monitor.cpp  Monitor.h  PluginBase.cpp  PluginBase.h
src/network/: Connection.cpp  Connection.h  Network.cpp  Network.h
src/reflect/: Clazz.h  ClazzFactory.cpp  ClazzFactory.h  ClazzField.h  ClazzMethod.h  ConstructTag.h  Constructor.h  GCNode.h  GcTable.cpp  GcTable.h  Object.cpp  Object.h  ObjectNode.h  common.h
src/route/: RouteModule.cpp  RouteModule.h
src/service/: ServiceAgent.cpp  ServiceAgent.h  ServiceBase.cpp  ServiceBase.h  ServiceContext.cpp  ServiceContext.h  ServiceModule.cpp  ServiceModule.h
src/timer/: TickerModule.cpp  TickerModule.h  Timer.cpp  Timer.h  TimerHandle.h  TimerManager.cpp  TimerManager.h  TimerModule.cpp  TimerModule.h
